--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,11 @@
 body {
   background-color: rgb(239, 240, 241);
-
 }
 
 main {
   padding: 20px;
   margin-bottom: 20px;
 }
-
-/*** Header ***/
 
 header {
   width: 100%;
@@ -18,11 +15,9 @@ header {
   justify-content: space-evenly;
   align-items: center;
   background-color: rgb(192, 192, 148);
-
 }
-
 header h1 {
-  font-family: 'Lobster', sans-serif;
+  font-family: "Lobster", sans-serif;
 }
 
 .linkmenu a {
@@ -35,13 +30,11 @@ header h1 {
   padding: 10px;
 }
 
-
 .logoweb1 {
   width: 60px;
   padding-left: 10px;
   margin-right: 10px;
 }
-
 
 nav ul li {
   list-style: none;
@@ -49,10 +42,6 @@ nav ul li {
   margin: 0 20px;
   margin-top: 10px;
 }
-
-
-
-/** main **/
 
 main::after {
   content: "";
@@ -67,8 +56,6 @@ main::after {
   margin-bottom: 50px;
 }
 
-
-
 .contenedor-seccion {
   display: flex;
   justify-content: space-around;
@@ -76,7 +63,6 @@ main::after {
   margin-bottom: 40px;
   border-radius: 10px;
   background-color: #f1e2e2;
-
 }
 
 .listaseccion {
@@ -92,7 +78,6 @@ main::after {
   padding: 20px;
   text-align: center;
 }
-
 .portadas img {
   width: 300px;
   border-radius: 8px 8px 0 0;
@@ -112,7 +97,6 @@ main::after {
   float: right;
   width: 640px;
   height: 360px;
-
 }
 
 h2 {
@@ -124,10 +108,8 @@ h2 {
 }
 
 p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-
-/** Blog **/
 
 .contenedor-blog {
   display: flex;
@@ -144,7 +126,6 @@ p {
   background-color: rgb(237, 231, 231);
   box-shadow: 0 4px 8px rgb(110, 47, 47);
 }
-
 .especias img {
   max-width: 200px;
   height: auto;
@@ -160,33 +141,39 @@ p {
   margin-left: 10px;
 }
 
-/** contacto **/
+.contenedor-box-contacto {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
 
 form {
-  margin-top: 20px;
+  padding: 50px 55px;
+  box-shadow: 0 0 20px rgb(5, 4, 4);
+  border-radius: 20px;
+  width: 50%;
+}
 
+.contenedor-contacto {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
 }
 
 label {
-  display: block;
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   color: rgb(8, 8, 8);
-
 }
 
-input[type="text"],
-textarea {
-  display: block;
-  width: 50%;
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
+input, textarea {
+  padding: 10px 17px;
+  border: 2px solid #9b9999;
+  border-radius: 10px;
   font-size: 16px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
-
-/** recetas **/
 
 .contenedor-recetas {
   display: flex;
@@ -207,20 +194,16 @@ textarea {
   padding: 20px;
   text-align: center;
 }
-
 .receta img {
   width: 100%;
   border-radius: 8px 8px 0 0;
 }
-
 .receta h3 {
   margin-top: 0;
 }
-
 .receta p {
   margin-bottom: 10px;
 }
-
 .receta a {
   text-decoration: none;
   background-color: #4caf50;
@@ -229,8 +212,6 @@ textarea {
   border-radius: 5px;
   display: inline-block;
 }
-
-/** biografia **/
 
 .contenedor-centrado {
   display: flex;
@@ -247,7 +228,6 @@ textarea {
   width: 600px;
   height: auto;
   margin-top: 20px;
-
 }
 
 .texto-biografia {
@@ -257,13 +237,10 @@ textarea {
   margin-right: 100px;
 }
 
-/** footer **/
-
 footer {
   margin: 20px;
   padding: 20px;
   text-align: center;
-
 }
 
 div ol li {
@@ -277,29 +254,20 @@ div ol li {
   height: auto;
 }
 
-
 /** Adaptado a Movil **/
-
-@media screen and (max-width: 768px) {  
-
+@media screen and (max-width: 768px) {
   body {
     display: block;
-
   }
-
   /** header **/
-
   .logoweb1 {
     margin-right: 10px;
   }
-
-
   .titulo {
     display: flex;
     align-items: center;
     font-size: 15px;
   }
-
   .linkmenu a {
     text-decoration: none;
     text-transform: uppercase;
@@ -309,87 +277,74 @@ div ol li {
     border-radius: 6px;
     padding: 1px;
   }
-
-
   nav ul li {
     list-style: none;
     display: inline-block;
     margin: 1px;
     margin-top: 10px;
   }
-
   /** main index **/
-
   .contenedor-seccion {
     flex-direction: column;
-
   }
-
   .portadas img {
     width: 100%;
     border-radius: 8px 8px 0 0;
   }
-
   .videotrailer {
     width: 100%;
     height: auto;
     margin-bottom: 10px;
   }
-
-
   .collage {
     margin-bottom: 5px;
   }
-
+  /** recetas **/
+  .contenedor-recetas {
+    display: block;
+  }
   /** biografia **/
-
   .contenedor-centrado {
     margin-left: 5px;
     margin-right: 5px;
   }
-
   .dibujobuffalo {
     width: 100%;
     height: auto;
   }
-
   .texto-biografia {
     font-size: 16px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
-
   /** blog **/
-
   .contenedor-blog {
     margin: 0;
   }
-
   .especias {
     width: 100%;
     display: block;
-}
-
-
-
+  }
+  /** contacto **/
+  form {
+    padding: 50px 30px;
+    width: 100%;
+  }
+  .contenedor-box-contacto {
+    display: flex;
+    margin-block: 50px;
+  }
   /** footer **/
-
   div ol li {
     width: 30px;
     margin-right: 50px;
   }
-
 }
-
-  /** adaptado tablet **/
-
+/** adaptado tablet **/
 @media screen and (max-width: 1200px) {
-
   body {
     display: block;
-
   }
-
-
-  
-  
 }
- 
+
+/*# sourceMappingURL=style.css.map */
