--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -61,6 +61,16 @@
         display: block;
     }
 
+    .receta img {
+        width: 100%;
+    }
+
+    .descripcion-collage {
+        font-size: 20px;
+
+    }
+
+
     /** biografia **/
 
     .contenedor-centrado {
