--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -34,7 +34,7 @@ main::after {
     text-align: center;
   
     img {
-      width: 100%;
+      width: 300px;
       border-radius: 8px 8px 0 0;
     }
   }
