--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,9 +1,14 @@
-body {
-    background-color: rgb(239, 240, 241);
+
+
+main {
+    margin-top: 80px;
+    padding-top: 20px;
+    background-image: url("../imagenes/fondo-web.jpg");
+   
 
 }
 
-main {
-    padding: 20px;
-    margin-bottom: 20px;
+footer{
+   
+    background-color: rgb(224, 224, 220);
 }
