--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -7,14 +7,18 @@
 header {
     width: 100%;
     display: flex;
-    margin-top: 5px;
+    position: fixed;
+    top: 0px;
+    margin-top: 0px;
+    justify-content: space-around;
     border-bottom: 2px;
-    justify-content: space-evenly;
     align-items: center;
-    background-color: rgb(192, 192, 148);
+    z-index: 1000;
+    background-color: rgb(224, 224, 220);
 
     h1 {
         font-family: 'Lobster', sans-serif;
+
     }
 }
 
@@ -23,20 +27,23 @@ header {
     text-transform: uppercase;
     font-weight: bold;
     color: aliceblue;
-    background: rgb(110, 47, 47);
+    background: rgb(153, 64, 64);
     border-radius: 10px;
-    padding: 10px;
-}
-
-.logoweb1 {
-    width: 60px;
-    padding-left: 10px;
-    margin-right: 10px;
+    padding: 5px;
+    margin: 0 5px;
 }
 
 nav ul li {
     list-style: none;
     display: inline-block;
-    margin: 0 20px;
+    margin: 0 10px;
     margin-top: 10px;
 }
+
+.logoweb1 {
+    width: 60px;
+    margin-right: 10px;
+    margin-left: 20px;
+   
+}
+
