--- a/scss/_recetas.scss
+++ b/scss/_recetas.scss
@@ -30,12 +30,11 @@
 }
  
 
-
 .receta {
   padding: 20px;
   text-align: center;
 
-  img {
+  .imagen-recetas {
     width: 50%;
     border-radius: 8px 8px 0 0;
   }
