--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ main::after {
   display: flex;
   justify-content: space-around;
   padding: 30px;
+  margin-top: 50px;
   margin-bottom: 40px;
   border-radius: 10px;
 }
@@ -99,7 +100,8 @@ p {
 }
 
 .contenedor-bienvenida {
-  padding: 70px;
+  margin-top: 80px;
+  margin-bottom: 100px;
   display: flex;
   align-items: center;
 }
@@ -322,6 +324,7 @@ h4 {
     margin: 0px;
   }
   .contenedor-bienvenida {
+    animation: none;
     margin: 0px;
     display: block;
   }
