--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -14,6 +14,7 @@ main::after {
   display: flex;
   justify-content: space-around;
   padding: 30px;
+  margin-top: 50px;
   margin-bottom: 40px;
   border-radius: 10px;
 }
@@ -50,7 +51,8 @@ p {
 }
 
 .contenedor-bienvenida {
-  padding: 70px;
+  margin-top: 80px;
+  margin-bottom: 100px;
   display: flex;
   align-items: center;
 }
