--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -70,6 +70,14 @@ p {
   margin-right: 100px;
 }
 
+.contenedor-bienvenida-blog {
+  margin-top: 80px;
+  margin-bottom: 100px;
+  display: flex;
+  align-items: center;
+}
+
+
 .imagen-redonda-blog {
   width: 200px;
   height: 200px;
