--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,13 @@ p {
   margin-right: 100px;
 }
 
+.contenedor-bienvenida-blog {
+  margin-top: 80px;
+  margin-bottom: 100px;
+  display: flex;
+  align-items: center;
+}
+
 .imagen-redonda-blog {
   width: 200px;
   height: 200px;
@@ -324,18 +331,11 @@ h4 {
     margin: 0px;
   }
   .contenedor-bienvenida {
-    animation: none;
-    margin: 0px;
-    display: block;
+    flex-direction: column;
   }
   .imagen-redonda {
-    width: 100%;
+    width: 50%;
     height: auto;
-    margin: 0px;
-    padding-top: 1px;
-  }
-  .imagen-redonda-blog {
-    width: 100%;
     margin: 0px;
     padding-top: 1px;
   }
@@ -343,6 +343,14 @@ h4 {
     font-size: 16px;
     margin-left: 5px;
     margin-right: 5px;
+  }
+  .contenedor-bienvenida-blog {
+    flex-direction: column-reverse;
+  }
+  .imagen-redonda-blog {
+    width: 50%;
+    margin: 0px;
+    padding-top: 1px;
   }
   .texto-bienvenida-blog {
     font-size: 16px;
