--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -51,29 +51,34 @@
     }
 
     .contenedor-bienvenida {
-        animation: none;
-        margin: 0px;
-        display: block;
+        flex-direction: column;
+
+        
     }
 
     .imagen-redonda {
-        width: 100%;
+        width: 50%;
         height: auto;
         margin: 0px;
         padding-top: 1px;
-    }
-
-    .imagen-redonda-blog {
-        width: 100%;
-        margin: 0px;
-        padding-top: 1px;
-
     }
 
     .texto-bienvenida {
         font-size: 16px;
         margin-left: 5px;
         margin-right: 5px;
+    }
+
+    .contenedor-bienvenida-blog {
+        flex-direction: column-reverse;
+        
+    }
+
+    .imagen-redonda-blog {
+        width: 50%;
+        margin: 0px;
+        padding-top: 1px;
+
     }
 
     .texto-bienvenida-blog {
