--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -5,7 +5,7 @@
     margin-right: 250px;
   }
   
-  .especias {
+  .especias,.especias-blog {
     width: 100%;
     margin-bottom: 50px;
     display: flex;
