--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -39,10 +39,10 @@ main::after {
 
 .botonmas {
   text-decoration: none;
-  background-color: #28582a;
+  background-color:  rgb(153, 64, 64);
   color: white;
   padding: 10px 20px;
-  border-radius: 5px;
+  
   display: inline-block;
 }
 
