--- a/scss/_recetas.scss
+++ b/scss/_recetas.scss
@@ -18,8 +18,8 @@
   padding: 10px 20px;
   border: 2px solid #333;
   background-color: #fff;
-  text-decoration: none; /* Para quitar el subrayado del enlace */
-  color: #333; /* Color del texto */
+  text-decoration: none; 
+  color: #333;
   cursor: pointer;
 }
 
@@ -45,4 +45,52 @@
   }
 
  
+}
+
+/** almuerzos **/
+
+.contenedor-recetas-web {
+  display: flex;
+  justify-content: space-around;
+  padding: 30px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  border-radius: 10px;
+}
+
+.seccion-recetas {
+  background-color: #fcfbfb;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+ 
+}
+
+.portadas-recetas {
+  padding: 20px;
+  text-align: center;
+
+.imagen-recetas-web {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+  }
+}
+
+.botonmas {
+  text-decoration: none;
+  background-color:  rgb(153, 64, 64);
+  color: white;
+  padding: 10px 20px;
+  
+  display: inline-block;
+}
+
+h3 {
+  font-family: "Homer Simpson UI";
+  font-weight: 900;
+  font-size: 1.1em;
+}
+
+.seccion-recetas:hover {
+  transform: scale(1.1);
 }
