--- a/css/style.css
+++ b/css/style.css
@@ -489,8 +489,8 @@ h4 {
   /** recetas escritas **/
 
   .pagina-receta .portadas img {
-  max-width: 500px;
-
+  width: 100%;
+  height: 100%;
   }
 
   .pagina-receta .video-container {
